# mines-cpp-chaleur

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  graph.py  main.cpp
cmake/: catch2.cmake  compiler.cmake  doctest.cmake
includes/calc/: heat.h  matrix.h  ode.h  solve.h  solve.hpp
includes/utils/: file.h  graph.h
src/: CMakeLists.txt  main.cpp
src/calc/: CMakeLists.txt  denseMatrix.cpp  heat.cpp  matrix.cpp  ode.cpp  sparseMatrix.cpp
src/utils/: CMakeLists.txt  file.cpp  graph.cpp
tests/: CMakeLists.txt  test_heat.cpp  test_matrix.cpp  test_ode.cpp
